# strace-to-duckdb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon  flake.nix
.github/workflows/: ci.yml
.nix/strace-to-duckdb/: default.nix
bench/: main.zig
benches/: parser_bench.rs
scripts/: e2e-bench.sh
src/: database.rs  database.zig  file_processor.zig  lib.rs  main.rs  main.zig  parallel_processor.rs  parallel_processor.zig  parser.rs  parser.zig  processor.rs  processor.zig  progress.zig  types.rs  types.zig  utils.zig  worker_pool.zig
tests/fixtures/: simple.txt  tiny-trace.txt
