[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam = "0.8.4"
duckdb = { version = "1.4.2", features = ["bundled"] }
indicatif = "0.17"
num_cpus = "1.17.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
